# neuro-voice

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.pgbouncer.yaml  gemini-search.md  pyproject.toml
configs/: seed_voices.yaml
configs/voices/: neeko-v01.yaml  tr-warm-storyteller-v0.yaml
data/casting-prompts/: v0.1.md
data/neeko-test-ses/: 03-sevinc.clean.txt  04-merak.txt  05-veda.txt  06-koruma.txt  08-cesaret.clean.txt  10-manifesto.clean.txt
data/reference-audio/: MANIFEST.md
data/test-sets/: v0.1-mini.md  v0.2-medium.md
deploy/: gateway.Dockerfile  worker.Dockerfile
deploy/pgbouncer/: pgbouncer.ini  userlist.txt.example
deploy/prometheus/: alerts.yml  prometheus.yml.example
docs/api/: openapi-policy.md  vendor-parity.md  versioning.md
docs/architecture/: README.md  auth-multi-tenant.md  data-model.md  observability.md  platform-v0.1.md  platform-v0.2.md  scale-roadmap.md  streaming-protocol.md  voxcpm2-integration.md  worker-process.md
docs/audit/: audit-2026-05-24-pre-faz-b1.md  checkpoint-2026-05-24-faz-a-exit.md  checkpoint-2026-05-24-faz-b1-exit.md  checkpoint-2026-05-24-faz-b1.5-exit.md  checkpoint-2026-05-24-faz-c-v1-exit.md  checkpoint-2026-05-25-faz-b5-exit.md  faz-a-mlops-audit.md  faz-a-self-audit.md  faz-b-exit-self-audit.md
docs/character/: casting-brief-v1.md  neeko-v1-spec.md  outreach-voiz-template.md  turkish-40min-recording-script-v1.md
docs/decisions/: 2026-05-28-api-key-format-and-admin-cookie.md  2026-05-28-eval-pin.md  2026-05-28-eval-system-slug.md  2026-05-28-finetune-pipeline.md  2026-05-28-header-and-env-prefix.md  2026-05-28-model-id-slug.md  2026-05-28-multilingual-frontend.md  2026-05-28-public-api-spec.md  2026-05-28-research-legacy-disposition.md  2026-05-28-voice-license-and-consent.md  2026-05-28-voice-lifecycle-and-rtbf.md  2026-05-28-voice-manifest-schema-v2.md  2026-05-28-watermark-generation.md  README.md
docs/legal/: outreach-hukuk-template.md  voice-talent-rider-draft-v0.1.md
docs/research/: 00-LEGACY.md  00-research-brief.md  01-chatgpt-findings-part1.md  01-chatgpt-findings-part2.md  01-google-findings.md  01a-atlas-area1-5-tts-landscape.md  01b-atlas-area2-turkish-g2p.md  01c-atlas-area3-8-speaker-ip.md  01d-atlas-area4-6-cds-data.md  01e-atlas-area7-eval.md  02-distilled-findings.md  03-voice-cloning-industry-patterns.md  04-latency-80-100ms-strategy.md  VENDOR_TTS_API_REFERENCE.md
docs/runbooks/: database-pool.md  latency-bench.md  load-chaos.md  observability-stack.md
docs/strategy/: 2026-05-29-production-readiness-assessment.md
experiments/2026-05-25-eval-harness-scaffold/: README.md
migrations/: env.py  script.py.mako
migrations/versions/: 2026_05_24_0001_0001_initial_schema.py  2026_05_24_0002_voice_access_model.py  2026_05_24_0003_usage_latency_metrics.py  2026_05_24_0004_usage_waterfall.py  2026_05_24_0005_gateway_first_byte_ms.py  2026_05_25_0006_fk_ondelete_policies.py  2026_05_25_0007_voice_catalog_enrichment.py  2026_05_25_0008_long_form_alignment.py  2026_05_25_0009_usage_engine_inputs.py  2026_05_28_0010_voice_license_taxonomy_and_consent.py  2026_05_28_0011_voice_lifecycle_and_rtbf.py  2026_05_28_0012_watermark_generation.py  2026_05_28_0013_api_key_prefix_to_nv.py
neeko-test-ses/: 01-uyanis.clean.txt  01-uyanis.txt  02-gece-korkusu.clean.txt  02-gece-korkusu.txt  04-merak.clean.txt  06-koruma.clean.txt  08-cesaret.txt  09-masal.clean.txt  10-manifesto.txt
notebooks/: 00-chatterbox-tr-demo.ipynb  01-voxcpm2-tr-demo.ipynb  03-platform-server-colab.ipynb  04-voxcpm2-lora-finetune-colab.ipynb  05-current-architecture-colab-smoke.ipynb  README.md  finetune_transcripts_template.csv
notebooks/archive/: 04-voxcpm2-lora-finetune-colab-legacy.ipynb
notebooks/templates/: neeko_proto_transcripts_template.csv
scripts/: bootstrap_voices.py  eval_pin.py  eval_run.py  finetune.py  latency_bench.py  load_bench.py  migrate_filesystem_to_db.py  seed_operator.py  smoke_test.py
src/audio/: __init__.py  encoders.py  postprocess.py  stats.py  watermark.py  wav.py
src/db/: __init__.py  base.py  models.py  session.py
src/eval/: __init__.py  dataset.py  report.py  runner.py
src/finetune/: __init__.py  config.py  export.py  inference.py  manifest.py  project.py  train.py  transcribe.py
src/frontend/: __init__.py  normalize.py  protocol.py  segment.py
src/live/: __init__.py  livekit.py  protocol.py  registry.py  sessions.py
src/observability/: __init__.py  metrics.py
src/registry/: __init__.py  audio_io.py  catalog.py
src/repos/: __init__.py  api_key.py  audit.py  data_deletion.py  idempotency.py  operator.py  talent_contract.py  tenant.py  usage.py  voice.py  voice_access.py  voice_consent.py  watermark.py
src/server/: __init__.py  auth.py  auth_legacy.py  config.py  engine.py  heartbeat.py  main.py  models.py  queue.py  rate_limit.py  reference_resolver.py  result_stream.py  schemas.py  streaming.py  ws.py
src/storage/: __init__.py  r2.py  reference_resolver.py
src/worker/: __init__.py  consumer.py  engine.py  heartbeat.py  live.py  main.py  pipeline.py  runtime.py  streaming.py
tests/: test_admin_flow.py  test_api_smoke.py  test_async_e2e.py  test_async_jobs.py  test_audio_encoders.py  test_audio_postprocess.py  test_audio_stats.py  test_audio_wav.py  test_auth_flow.py  test_db_models.py  test_db_pool_config.py  test_engine_lora_cache.py  test_eval_harness.py  test_grafana_dashboard.py  test_heartbeat_backpressure.py  test_latency_bench.py  test_latency_waterfall.py  test_live_registry.py  test_live_sessions.py  test_load_bench.py  test_metrics_endpoint.py  test_models_registry.py  test_normalize.py  test_numbers.py  test_observability_metrics.py  test_queue_schemas.py  test_r2_storage.py  test_rate_limit.py  test_reference_resolver.py  test_repos.py  test_reproducibility.py  test_result_stream.py  test_security.py  test_seed_catalog.py  test_segment.py  test_worker_consumer.py  test_worker_live.py  test_worker_pipeline.py  test_worker_runtime.py  test_worker_skeleton.py  (+2 more)
vendors/elevenlabs/: README.md
(+26 files in other folders)
