[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqai-voice"
version = "0.2.0"
description = "NQAI Türkçe TTS platformu — VoxCPM2 üstüne voice catalog + streaming API"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "NeuroQubit / NQAI" }]

dependencies = [
    # HTTP framework + ASGI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "websockets>=13",

    # Database + ORM + migrations
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.13",

    # Cache + queue
    "redis>=5.2",

    # Object storage
    "boto3>=1.35",

    # Crypto + auth
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.9",
    "itsdangerous>=2.2",

    # Templating (admin UI)
    "jinja2>=3.1",

    # Observability
    "structlog>=24.4",

    # Config
    "pyyaml>=6.0",

    # Audio (frontend / registry)
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.11",

    # Model runtime (worker process; gateway doesn't need these but we keep
    # them in the umbrella package while the split is fresh — Faz B'de
    # ayrı `nqai-voice-worker` paketine taşınır)
    "torch>=2.5",
    "torchaudio>=2.5",
    "transformers>=4.46",
    "voxcpm>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers[postgres,redis]>=4.8",
    "aiosqlite>=0.20",          # in-memory SQLite for fast unit tests
    "fakeredis[lua]>=2.26",     # rate-limit unit tests (Lua scripting)
    "moto[s3]>=5.0",            # S3/R2 storage unit tests
]
client = [
    "httpx>=0.27",
    "rich>=13.0",
    "websockets>=13",
]

[project.scripts]
nqai-voice-server = "server.main:run"
nqai-voice-smoke = "scripts.smoke_test:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "audio*",
    "db*",
    "frontend*",
    "live*",
    "registry*",
    "repos*",
    "server*",
    "storage*",
    "worker*",
]

[tool.setuptools.package-data]
# Admin UI Jinja templates ship with the package so `pip install` (and
# Docker image builds with `pip install -e .`) include them under
# server/admin/templates/. Without this entry, pip would install only the
# .py files and the dashboard endpoint would 500 with TemplateNotFound.
"server.admin" = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection style uses Depends(...) as a default — not a bug.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations use upgrade()/downgrade() at module level by design.
"migrations/versions/*.py" = ["E402"]
# Tests build SQLAlchemy default factories that look like fn-call-in-default.
"tests/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
