[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurovoice"
version = "0.4.0"
description = "NeuroVoice — multilingual TTS API platform (VoxCPM2 base + language/character LoRA adapters)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "NeuroQubit" }]

dependencies = [
    # HTTP framework + ASGI
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "websockets>=13",

    # Database + ORM + migrations
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.13",

    # Cache + queue
    "redis>=5.2",

    # Object storage
    "boto3>=1.35",

    # Crypto + auth
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.9",
    "itsdangerous>=2.2",

    # Templating (admin UI)
    "jinja2>=3.1",

    # Observability
    "structlog>=24.4",
    "prometheus_client>=0.21",

    # Config
    "pyyaml>=6.0",

    # Audio (frontend / registry)
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.11",

    # Model runtime (worker process; gateway doesn't strictly need these
    # but the umbrella package keeps them until the worker is split into
    # its own distribution).
    #
    # Minor-pinned so `pip install -U` cannot
    # silently jump a major torch version under the model. cuDNN /
    # transformers / voxcpm changes between minors can shift inference
    # outputs even with the same seed; same-minor patch upgrades are
    # safe enough to leave open. Production should generate a lockfile
    # (uv lock / pip-tools) on top of these envelopes for true repro.
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.46,<4.47",
    # voxcpm 2.x is the current series that ships VoxCPM2; 0.x / 1.x are
    # not on PyPI in the original PR #1 range. Pin to the 2.x major so
    # `pip install -U` still gets patch fixes but cannot jump to a 3.x
    # that might break the `from voxcpm import VoxCPM` surface.
    "voxcpm>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "testcontainers[postgres,redis]>=4.8",
    "aiosqlite>=0.20",          # in-memory SQLite for fast unit tests
    "fakeredis[lua]>=2.26",     # rate-limit unit tests (Lua scripting)
    "moto[s3]>=5.0",            # S3/R2 storage unit tests
    "pyloudnorm>=0.1.1",        # ITU-R BS.1770-5 LUFS (A.2 hotfix)
]
client = [
    "httpx>=0.27",
    "rich>=13.0",
    "websockets>=13",
]
# ADR-12 — eval harness backends. Opt-in; not pulled by default so
# the gateway / worker minimum install stays slim.
# `transformers` (used for WavLM-base-plus-sv SECS) is in main deps.
# UTMOSv2 is git-only — install separately with:
#     pip install git+https://github.com/sarulab-speech/UTMOSv2.git
eval = [
    "openai-whisper>=20240930",   # Whisper-large-v3 WER + CER backend
    "jiwer>=3.0",                  # WER / CER computation
]
# ADR-13 — AudioSeal watermark generator + detector. Opt-in; the
# worker treats a missing dep as "skip watermarking" so the
# minimum install can still serve un-watermarked voices. License-
# kind-bound voices (talent-contract / public-figure /
# partner-licensed) practically require this extra.
watermark = [
    "audioseal>=0.2",
]

[project.scripts]
neurovoice-server = "server.main:run"
neurovoice-smoke = "scripts.smoke_test:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "audio*",
    "db*",
    "eval*",
    "finetune*",
    "frontend*",
    "live*",
    "observability*",
    "registry*",
    "repos*",
    "server*",
    "storage*",
    "worker*",
]

[tool.setuptools.package-data]
# Admin UI Jinja templates ship with the package so `pip install` (and
# Docker image builds with `pip install -e .`) include them under
# server/admin/templates/. Without this entry, pip would install only the
# .py files and the dashboard endpoint would 500 with TemplateNotFound.
"server.admin" = ["templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection style uses Depends(...) as a default — not a bug.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations use upgrade()/downgrade() at module level by design.
"migrations/versions/*.py" = ["E402"]
# Tests build SQLAlchemy default factories that look like fn-call-in-default.
"tests/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
